# zero2prod

./: .gitignore  Cargo.toml  Dockerfile  README.md  spec.yaml
.github/workflows/: general.yml
configuration/: local.toml  production.toml
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs
tests/: health_check.rs  subscribe.rs
tests/api/: health_check.rs  helpers.rs  main.rs  subscribe.rs
