[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
axum = "0.6.2"
bb8 = "0.8.0"
bb8-postgres = "0.8.1"
config = "0.13.3"
hyper = "0.14.23"
refinery = { version = "0.8.7", features = ["tokio-postgres"] }
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.152", features = ["derive"] }
time = "0.3.17"
tokio = { version = "1.24.1", features = ["full"] }
tokio-postgres = { version = "0.7.7", features = ["with-uuid-1", "with-time-0_3"] }
tower-http = { version = "0.3.5", features = ["trace", "request-id"] }
tracing = "0.1.37"
tracing-bunyan-formatter = "0.3.6"
tracing-subscriber = { version = "0.3.16", features = ["registry", "env-filter"] }
uuid = { version = "1.2.2", features = ["v4"] }

[dev-dependencies]
reqwest = "0.11.13"
